# Captioner_Translate

./: .gitignore  2translate.sh  ARCHITECTURE.md  PYTHON_CLI_README.md  README.md  README_zh.md  main.py  pyproject.toml  requirements.txt  subtitle_translator_cli.py
app/core/subtitle_processor/: optimizer.py  split_by_llm.py  spliter.py
app/core/thread/: subtitle_optimization_thread.py
app/core/utils/: logger.py
bk_asr/: ASRData.py
captioner_translate/: __init__.py  cli.py  core.py  translator.py
subtitle_processor/: config.py  data.py  optimizer.py  prompts.py  split_by_llm.py  spliter.py  subtitle_config.py  summarizer.py
utils/: json_repair.py  logger.py  srt2ass.py
